--- a/src/pages/homes/mobile-app.astro
+++ b/src/pages/homes/mobile-app.astro
@@ -15,10 +15,10 @@ import Button from '~/components/ui/Button.astro';
 import Image from '~/components/common/Image.astro';
 
 const appStoreImg = '~/assets/images/app-store.png';
-const appStoreDownloadLink = 'https://github.com/onwidget/astrowind';
+const appStoreDownloadLink = 'https://github.com/iot-ecology/go-iot-platform';
 
 const googlePlayImg = '~/assets/images/google-play.png';
-const googlePlayDownloadLink = 'https://github.com/onwidget/astrowind';
+const googlePlayDownloadLink = 'https://github.com/iot-ecology/go-iot-platform';
 
 const metadata = {
   title: 'Mobile App Homepage',
@@ -240,7 +240,7 @@ const metadata = {
     callToAction={{
       target: '_blank',
       text: 'Read more testimonials',
-      href: 'https://github.com/onwidget/astrowind',
+      href: 'https://github.com/iot-ecology/go-iot-platform',
       icon: 'tabler:chevron-right',
     }}
   />
