--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'Go IoT Platform — GoIoT: Efficient, scalable MQTT IoT platform in Go.',
   ignoreTitleTemplate: true,
 };
 ---
@@ -25,28 +25,25 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        text: 'Get Project',
+        href: 'https://github.com/iot-ecology/go-iot-platform',
         target: '_blank',
         icon: 'tabler:download',
       },
       { text: 'Learn more', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
+    image={{ src: '~/assets/images/o1.png', alt: 'Go IoT Platform Image' }}
   >
     <Fragment slot="title">
-      Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white highlight"> Astro 4.0</span> + Tailwind CSS
+      Quickly create <span class="hidden xl:inline">IoT project using</span>
+      <span class="text-accent dark:text-white highlight">Go IoT Platform</span> 
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 4.0
-        + Tailwind CSS.</span
+        <span class="font-semibold">Go IoT Platform</span> is a free, a high-efficiency and scalable Internet of Things solution developed with the Go languag.</span
       >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
-      Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages &
-      Blogs.
+      This platform focuses on providing stable and reliable MQTT client management, as well as comprehensive processing and analysis of MQTT reported data.
     </Fragment>
   </Hero>
 
@@ -59,44 +56,44 @@ const metadata = {
   <Features
     id="features"
     tagline="Features"
-    title="What you get with AstroWind"
-    subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022."
+    title="What you get with Go IoT Platform"
+    subtitle="The top IoT development platform in the market is widely favored for its speed, ease of use, and wide compatibility, providing developers with an efficient, intuitive, and powerful development environment."
     items={[
       {
-        title: 'Astro + Tailwind CSS Integration',
+        title: 'MQTT ',
         description:
-          'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
+          'By adopting the MQTT protocol, it provides developers with a fast, reliable, and easily integrated communication solution.',
         icon: 'tabler:brand-tailwind',
       },
       {
-        title: 'Ready-to-use Components',
+        title: 'Massive MQTT Client Management',
         description:
-          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
-        icon: 'tabler:components',
+          'Our independently developed monitoring system ensures that the MQTT client can remain online continuously and stably. The system has load balancing capability and can automatically switch in case of failure.',
+        icon: 'tabler:subtask',
       },
       {
-        title: 'Best Practices',
+        title: 'Alarm Analysis',
         description:
-          'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
-        icon: 'tabler:list-check',
+          'Users do not need to write tedious program code, they can set relevant options for data alarms through a simple and intuitive web interface.',
+        icon: 'tabler:bell-ringing',
       },
       {
-        title: 'Excellent Page Speed',
+        title: 'Data Visualization',
         description:
-          'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
-        icon: 'tabler:rocket',
+          'We use intuitive charts (including line charts and bar charts, etc.) to enable users to quickly and accurately understand the key information of the data.',
+        icon: 'tabler:chart-bar',
       },
       {
-        title: 'Search Engine Optimization (SEO)',
+        title: 'Offline Computing',
         description:
-          "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
-        icon: 'tabler:arrows-right-left',
+          "We provide powerful offline analysis tools that allow users to delve deeper into historical data for detailed processing and analysis.",
+        icon: 'tabler:calculator',
       },
       {
-        title: 'Open to new ideas and contributions',
+        title: 'Script',
         description:
-          'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
-        icon: 'tabler:bulb',
+          'Users can use custom scripts to personalize and process MQTT messages, including alarm analysis and computational analysis, thereby improving the flexibility and automation level of data processing.',
+        icon: 'tabler:script',
       },
     ]}
   />
@@ -380,8 +377,8 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        text: 'Get Project',
+        href: 'https://github.com/iot-ecology/go-iot-platform',
         target: '_blank',
         icon: 'tabler:download',
       },
