--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -203,7 +203,7 @@ const metadata = {
     callToAction={{
       target: '_blank',
       text: 'More testimonials...',
-      href: 'https://github.com/onwidget/astrowind',
+      href: 'https://https://github.com/iot-ecology/go-iot-platform',
       icon: 'tabler:chevron-right',
     }}
   />
