--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -163,4 +163,6 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
       </div>
     </div>
   </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2032930149616773"
+          crossorigin="anonymous"></script>
 </header>
