--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,14 +22,16 @@ const metadata = {
     }}
   >
     <Fragment slot="title">
-      Elevate your online presence with our <br />
-      <span class="text-accent dark:text-white highlight"> Beautiful Website Templates</span>
+
+      Quickly start IoT applications using our project
     </Fragment>
 
     <Fragment slot="subtitle">
-      Donec efficitur, ipsum quis congue luctus, mauris magna convallis mauris, eu auctor nisi lectus non augue. Donec
-      quis lorem non massa vulputate efficitur ac at turpis. Sed tincidunt ex a nunc convallis, et lobortis nisi tempus.
-      Suspendisse vitae nisi eget tortor luctus maximus sed non lectus.
+      Go IoT Platform, a high-efficiency and scalable Internet of Things solution developed with the Go language. 
+      This platform focuses on providing stable and reliable MQTT client management, 
+      as well as comprehensive processing and analysis of MQTT reported data.
+
+
     </Fragment>
   </Hero>
 
@@ -38,84 +40,40 @@ const metadata = {
   <Stats
     title="Statistics about us"
     stats={[
-      { title: 'Offices', amount: '4' },
-      { title: 'Employees', amount: '248' },
-      { title: 'Templates', amount: '12' },
-      { title: 'Awards', amount: '24' },
+      { title: 'Downloads', amount: '4K' },
+      { title: 'Stars', amount: '1K' },
+      { title: 'Forks', amount: '0.2K' },
+      { title: 'Users', amount: '4K' },
     ]}
   />
 
   <!-- Features3 Widget ************** -->
 
   <Features3
-    title="Our templates"
-    subtitle="Etiam scelerisque, enim eget vestibulum luctus, nibh mauris blandit nulla, nec vestibulum risus justo ut enim. Praesent lacinia diam et ante imperdiet euismod."
+    title="Our project"
+    subtitle="The Go IoT Platform is the starting framework for developing various IoT application scenarios."
     columns={3}
     isBeforeContent={true}
     items={[
       {
-        title: 'Educational',
+        title: 'Smart City',
         description:
-          'Morbi faucibus luctus quam, sit amet aliquet felis tempor id. Cras augue massa, ornare quis dignissim a, molestie vel nulla.',
+          'Smart city is a new urban model that utilizes technologies such as the Internet of Things, big data, cloud computing, and artificial intelligence to intelligently manage and serve various aspects of urban operation.',
         icon: 'tabler:template',
       },
       {
-        title: 'Interior Design',
+        title: 'Smart Agriculture',
         description:
-          'Vivamus porttitor, tortor convallis aliquam pretium, turpis enim consectetur elit, vitae egestas purus erat ac nunc nulla.',
+          'Intelligent agriculture is a modern agricultural model that utilizes modern information technology to intelligently manage and precisely operate agricultural production processes.',
         icon: 'tabler:template',
       },
       {
-        title: 'Photography',
+        title: 'Smart Home',
         description:
-          'Duis sed lectus in nisl vehicula porttitor eget quis odio. Aliquam erat volutpat. Nulla eleifend nulla id sem fermentum.',
+          'Smart home is a specific application of Internet of Things technology in home environments. It achieves remote control, automated management, and optimized living environment by connecting various devices and systems in the home.',
         icon: 'tabler:template',
       },
-    ]}
-  />
-
-  <!-- Features3 Widget ************** -->
-
-  <Features3
-    columns={3}
-    isAfterContent={true}
-    items={[
-      {
-        title: 'E-commerce',
-        description:
-          'Rutrum non odio at vehicula. Proin ipsum justo, dignissim in vehicula sit amet, dignissim id quam. Sed ac tincidunt sapien.',
-        icon: 'tabler:template',
-      },
-      {
-        title: 'Blog',
-        description:
-          'Nullam efficitur volutpat sem sed fringilla. Suspendisse et enim eu orci volutpat laoreet ac vitae libero.',
-        icon: 'tabler:template',
-      },
-      {
-        title: 'Business',
-        description:
-          'Morbi et elit finibus, facilisis justo ut, pharetra ipsum. Donec efficitur, ipsum quis congue luctus, mauris magna.',
-        icon: 'tabler:template',
-      },
-      {
-        title: 'Branding',
-        description:
-          'Suspendisse vitae nisi eget tortor luctus maximus sed non lectus. Cras malesuada pretium placerat. Nullam venenatis dolor a ante rhoncus.',
-        icon: 'tabler:template',
-      },
-      {
-        title: 'Medical',
-        description:
-          'Vestibulum malesuada lacus id nibh posuere feugiat. Nam volutpat nulla a felis ultrices, id suscipit mauris congue. In hac habitasse platea dictumst.',
-        icon: 'tabler:template',
-      },
-      {
-        title: 'Fashion Design',
-        description:
-          'Maecenas eu tellus eget est scelerisque lacinia et a diam. Aliquam velit lorem, vehicula id fermentum et, rhoncus et purus.',
-        icon: 'tabler:template',
-      },
+      
     ]}
     image={{
       src: 'https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80',
@@ -123,105 +81,62 @@ const metadata = {
     }}
   />
 
+
+  
+
   <!-- Steps2 Widget ****************** -->
 
   <Steps2
     title="Our values"
-    subtitle="Maecenas eu tellus eget est scelerisque lacinia et a diam. Aliquam velit lorem, vehicula id fermentum et, rhoncus et purus. Nulla facilisi. Vestibulum malesuada lacus."
+    subtitle=""
     items={[
       {
-        title: 'Customer-centric approach',
+        title: 'Efficiency',
         description:
-          'Donec id nibh neque. Quisque et fermentum tortor. Fusce vitae dolor a mauris dignissim commodo. Ut eleifend luctus condimentum.',
+          'We hope to reduce the duplication of work in IoT software development and enable users to quickly process usage data without being disturbed by trivial matters.',
       },
       {
-        title: 'Constant Improvement',
+        title: 'Simple',
         description:
-          'Phasellus laoreet fermentum venenatis. Vivamus dapibus pulvinar arcu eget mattis. Fusce eget mauris leo.',
-      },
-      {
-        title: 'Ethical Practices',
-        description:
-          'Vestibulum imperdiet libero et lectus molestie, et maximus augue porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.',
+          'Our project design process aims to use simple methods to enable users to efficiently achieve the desired results, but requires a little bit of scripting (JavaScript) programming skills.',
       },
     ]}
   />
 
   <!-- Steps2 Widget ****************** -->
 
-  <Steps2
-    title="Achievements"
-    subtitle="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, quam nec venenatis lobortis, mi risus tempus nulla, sed porttitor est nibh at nulla."
-    isReversed={true}
-    callToAction={{
-      text: 'See more',
-      href: '/',
-    }}
-    items={[
-      {
-        title: 'Global reach',
-        description: 'Nam malesuada urna in enim imperdiet tincidunt. Phasellus non tincidunt nisi, at elementum mi.',
-        icon: 'tabler:globe',
-      },
-      {
-        title: 'Positive customer feedback and reviews',
-        description:
-          'Cras semper nulla leo, eget laoreet erat cursus sed. Praesent faucibus massa in purus iaculis dictum.',
-        icon: 'tabler:message-star',
-      },
-      {
-        title: 'Awards and recognition as industry experts',
-        description:
-          'Phasellus lacinia cursus velit, eu malesuada magna pretium eu. Etiam aliquet tellus purus, blandit lobortis ex rhoncus vitae.',
-        icon: 'tabler:award',
-      },
-    ]}
-  />
 
   <!-- Features2 Widget ************** -->
 
-  <Features2
-    title="Our locations"
-    tagline="Find us"
-    columns={4}
-    items={[
-      {
-        title: 'EE.UU',
-        description: '1234 Lorem Ipsum St, 12345, Miami',
-      },
-      {
-        title: 'Spain',
-        description: '5678 Lorem Ipsum St, 56789, Madrid',
-      },
-      {
-        title: 'Australia',
-        description: '9012 Lorem Ipsum St, 90123, Sydney',
-      },
-      {
-        title: 'Brazil',
-        description: '3456 Lorem Ipsum St, 34567, São Paulo',
-      },
-    ]}
-  />
 
   <!-- Features2 Widget ************** -->
 
   <Features2
     title="Technical Support"
     tagline="Contact us"
-    columns={2}
+    columns={4}
     items={[
       {
-        title: 'Chat with us',
+        title: 'Email',
         description:
-          'Integer luctus laoreet libero, auctor varius purus rutrum sit amet. Ut nec molestie nisi, quis eleifend mi.',
-        icon: 'tabler:messages',
+          'You can send an email to <a href="mailto:wangtaolee97@gmail.com">Zen HuiFer</a>',
+        icon: 'tabler:mail',
       },
       {
-        title: 'Call us',
+        title: 'GitHub',
         description:
-          'Mauris faucibus finibus orci, in posuere elit viverra non. In hac habitasse platea dictumst. Cras lobortis metus a hendrerit congue.',
-        icon: 'tabler:headset',
+          'You can submit <a href="https://github.com/iot-ecology/go-iot-platform/issues">Issues</a> to us to establish contact with us',
+        icon: 'tabler:brand-github',
+      },{
+        title: 'Twitter',
+        description:
+          'You can follow my  <a href="https://x.com/fer_hui14457">Twitter</a>',
+        icon: 'tabler:brand-twitter',
+      },{
+        title: 'ProductHunt',
+        description:
+          'By accessing <a href="https://www.producthunt.com/posts/go-iot-platform">go-iot-platform</a> fund us',
+        icon: 'tabler:brand-producthunt',
       },
     ]}
   />
